# mapflpy

./: .gitignore  README.md  README.rst  environment.yml  meson.build  noxfile.py  pyproject.toml  pytest.ini  registry.txt
.github/workflows/: docs.yml  publish.yml  sdist.yml  wheels.yml
docs/: fetch.sh  makedocs.sh
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: module.rst
docs/source/api/: index.rst  tracer.rst
docs/source/examples/: index.rst
docs/source/guide/: dependencies.rst  development.rst  getting_started.rst  index.rst  installation.rst  overview.rst
examples/: GALLERY_HEADER.rst
examples/01_getting_started/: GALLERY_HEADER.rst  p01_tracing_forward.py  p02_tracing_backward.py  p03_tracing_forward_backward.py  p04_adding_a_magnetogram.py
examples/02_advanced/: GALLERY_HEADER.rst
examples/02_using_tracer_class/: p01_using_defaults.py  p02_setting_tracing_direction.py  p03_adjusting_mapfl_params.py  p04_manipulating_field_data.py
examples/03_using_tracermp_class/: p01_using_defaults.py  p02_creating_multiple_tracermp.py  p03_magnetic_field.py
examples/04_advanced_examples/: p01_interdomain_tracing.py  p02_coloring_by_polarity.py  p03_filtering_fieldlines.py
mapflpy/: __init__.py  _typing.py  data.py  run.py  scripts.py  tracer.py  utils.py
mapflpy/fortran/: __init__.py
mapflpy/tests/: conftest.py  test_module.py  test_tracing.py  utils.py
mapflpy/tests/data/: defaults.json  reference_traces.npz  reference_tracing_dipole.npz
mapflpy/tests/test_tracer/: test_fortran_calls.py  test_trace_routines.py
mapflpy/tests/test_tracermp/: test_class_primitives_.py  test_fortran_calls_.py  test_trace_routines_.py
src/: mapflpy_fortran.f90
src/mapfl/: mapfl.f
tests/: conftest.py  test_module.py  utils.py
tests/test_tracer/: test_fortran_calls.py  test_trace_routines.py
tests/test_tracermp/: test_fortran_calls_.py  test_trace_routines_.py
tools/: pyproject_version.py
