[build-system]
build-backend = 'mesonpy'
requires = [
  "numpy>=2.0.0",
  "h5py>=3.15.0",
  "meson-python>=0.13.1",
  "ninja>=1.8.2"
]

[project]
name = "mapflpy"
dynamic = ["version"]
description = "Python extension for tracing field lines using the Fortran tracer from MapFL"
authors = [
  {name = "Predictive Science Inc.", email = "webmaster@predsci.com"},
  {name = "Ryder Davidson"},
  {name = "Cooper Downs"},
  {name = "Andres Reyes"},
  {name = "Asher Pembroke"},
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
keywords = [
  "solar physics", "space physics", "heliophysics", "magnetohydrodynamic", "science",
  "mas", "predsci", "psi", "modeling", "fortran"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.1.0",
  "h5py>=3.15.0",
  "psi-io>=1.0.0",
]

[project.urls]
homepage = "https://predsci.com/"
documentation = "https://predsci.com/docs/mapflpy"
repository = "https://github.com/predsci/mapflpy"

[project.optional-dependencies]
hdf4 = ["pyhdf>=0.11.6"]
interp = ["scipy"]
build = ["python-build"]
test = ["pytest>=8.4.0", "pytest-cov"]
types = ["mypy>=1.15"]
lint = ["ruff>=0.11.7"]
docs = ["sphinx==8.2.3", "sphinx-book-theme==1.1.4", "sphinx-gallery==0.19.0", "pooch==1.8.2", "matplotlib==3.10.7"]
dev = ["mapflpy[hdf4,tests,docs,interp]"]

[tool.setuptools.packages.find]
include = ["mapflpy", "mapflpy.*"]
exclude = ["tests","docs","examples","src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-rA -v"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["mapflpy"]

[[tool.mypy.overrides]]
module = "mapflpy.*"
ignore_missing_imports = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["docs/_build", ".tox", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = ["E","F","W","I","N","B","UP","SIM"]
ignore = ["E203","E501", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mapflpy]
conda = ["c-compiler", "cxx-compiler", "fortran-compiler", "pkg-config", "hdf5"]