# PyProject Configuration
# =======================

# Build System
# ------------
[build-system]
build-backend = 'mesonpy'
requires = [
  "numpy>=2.0.0",
  "h5py>=3.15.0",
  "meson-python>=0.13.1",
  "ninja>=1.8.2"
]

# Project Metadata
# ----------------
[project]
name = "mapflpy"
version = "1.1.6"
description = "Fast field line tracing for spherical vector fields"
authors = [
  {name = "Predictive Science Inc.", email = "webmaster@predsci.com"},
  {name = "Ryder Davidson"},
  {name = "Cooper Downs"},
  {name = "Andres Reyes"},
  {name = "Asher Pembroke"},
]
readme = "README.rst"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
keywords = [
  "solar physics",
  "space physics",
  "heliophysics",
  "magnetohydrodynamic",
  "science",
  "mas",
  "predsci",
  "psi",
  "modeling",
  "fortran"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Fortran",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Unix",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Typing :: Typed",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.1.0",
  "psi-io>=2.0.2",
]

# Project URLS
# ------------
[project.urls]
homepage = "https://predsci.com/"
documentation = "https://predsci.com/doc/mapflpy"
repository = "https://github.com/predsci/mapflpy"

# Project Dependencies
# --------------------
[project.optional-dependencies]
hdf4 = [
  "pyhdf>=0.11.6"
]
data = [
  "pooch==1.8.2",
  "matplotlib==3.10.7",
  "scipy"
]
build = [
  "python-build",
  "packaging"
]
test = [
  "pytest>=8.4.0",
  "pytest-cov"
]
types = [
  "mypy>=1.15"
]
lint = [
  "ruff>=0.11.7"
]
docs = [
  "sphinx==8.2.3",
  "sphinx-book-theme==1.1.4",
  "sphinx-gallery==0.19.0",
  "sphinx-copybutton==0.5.2",
  "pooch==1.8.2",
  "matplotlib==3.10.7",
  "scipy",
  "pthree==1.0.1"
]
dev = [
  "nox>=2025.11.12",
]
all = [
  "mapflpy[hdf4,data,build,test,types,lint,docs,dev]",
]

# Tools & Extensions
# ==================

## Setuptools configuration
## ------------------------
#[tool.setuptools.packages.find]
#include = [
#  "mapflpy",
#  "mapflpy.*"
#]
#exclude = [
#  "tests",
#  "docs",
#  "examples",
#  "src",
#  "tools"
#]

# Testing (pytest) configuration
# ------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--cov=mapflpy",
  "--cov-report=term-missing",
  "--maxfail=1",
  "--import-mode=importlib",
]

# Coverage (pytest-cov) configuration
# -----------------------------------
[tool.coverage.run]
branch = true
source = ["mapflpy"]
parallel = true
relative_files = true
omit = [
  "tests/*",
  "docs/_build/*",
  "*/_version.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "def __repr__",
]

# Typing (mypy) configuration
# ---------------------------
[tool.mypy]
strict = true
ignore_missing_imports = true
files = ["mapflpy"]

[[tool.mypy.overrides]]
module = "mapflpy.*"
ignore_missing_imports = false

# Linting (ruff) configuration
# ----------------------------
[tool.ruff]
fix = false
unsafe-fixes = false
line-length = 100
src = ["mapflpy"]
extend-exclude = [
  "docs",
  ".nox",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
  "src",
  "tests"
]

[tool.ruff.lint]
explicit-preview-rules = true
preview = true
extend-select = [
  "A",     # flake8-builtins
  "AIR",   # Airflow
  "ANN",   # flake8-annotations
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except
  "C4",    # flake8-comprehensions
  "C90",   # mccabe
  "COM",   # flake8-commas
  # "CPY",   # flake8-copyright
  "D",     # pydocstyle
  "DJ",    # flake8-django
  # "DOC",   # pydocstyle
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle
  "EM",    # flake8-errmsg
  "ERA",   # Eradicate
  "EXE",   # flake8-executable
  "F",     # Pyflakes
  "FA",    # flake8-future-annotations
  "FBT",   # flake8-boolean-trap
  "FIX",   # flake8-fixme
  "FLY",   # flynt
  "FURB",  # refurb
  "G",     # flake8-logging-format
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "INP",   # flake8-no-pep420
  "INT",   # flake8-gettext
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "N",     # pep8-naming
  "NPY",   # NumPy-specific rules
  "PERF",  # Perflint
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # Pylint
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-use-pathlib
  "PYI",   # flake8-pyi
  "Q",     # flake8-quotes
  "RET",   # flake8-return
  "RSE",   # flake8-raise
  "RUF",   # Ruff-specific rules
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "SLOT",  # flake8-slots
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "TD",    # flake8-todos
  "TID",   # flake8-tidy-imports
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "W",     # pycodestyle
  "YTT",   # flake8-2020
]
ignore = [
  "B905",    #`zip()` without an explicit `strict=` parameter
  "C408",    # Unnecessary `dict()` call (rewrite as a literal)
  "NPY002", # Replace legacy `np.random.rand` call with `np.random.Generator`
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["mapflpy"]
combine-as-imports = true
force-single-line = true
force-sort-within-sections = true
required-imports = [
  "from __future__ import annotations",
]

# Documentation (sphinx) configuration
# ------------------------------------
[tool.sphinx_build]
addopts = [
  "-b", "html",
  "-a",
  "-E"
]

# Environment (mapflpy) configuration
# -----------------------------------
[tool.mapflpy]
conda = [
  "c-compiler",
  "cxx-compiler",
  "fortran-compiler",
  "pkg-config",
  "hdf5",
  "zlib"
]